--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,6 @@ main{
     color: white;
 }
 
-.social-container{
-    width: 48px;
-    background-color: aliceblue;
-}
-
 .content-container{
     flex-grow: 1;
     display: flex;
@@ -24,6 +19,7 @@ main{
     font-size: 8rem;
     font-family: 'Mulish', sans-serif;
     line-height: 5rem;
+    font-weight: 375;
 }
 
 .content-container h1 span{
@@ -53,4 +49,34 @@ main{
     font-size: 1.5rem;
     font-style: italic;
     font-weight: 100px;
+}
+
+.social-container ul {
+    height: 100%;
+    width: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+}
+
+.social-container a{
+    height: 48px;
+    width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    transition: all .7s;
+}
+
+.social-container a{
+    font-size: 1.5rem;
+}
+
+.social-container a:hover{
+    background-color: #E62721;
+    border-color: #E62721;
 }
