--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header{
 
 .links-container a:hover{
 
-    background-color: red;
+    background-color: #E62721;
 }
 
 main{
@@ -42,6 +42,22 @@ footer{
         height: 70px;
     }
     .links-container{
-        display: none;
+        background-color: #000;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        flex-direction: column;
+        justify-content: center;
+        gap: 65px;
+        font-size: 2.5rem;
+        font-weight: 300;
+        transform: translate(100%);
+        transition: all .5s;
+    }
+    .menu-burger-container.show ~ .links-container{
+        transform: translate(0);
     }
 }
